hotrod/hotrod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: hotrod
  name: hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hotrod
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/jaeger-example: "true"
        io.kompose.service: hotrod
    spec:
      containers:
      - args:
        - all
        image: jaegertracing/example-hotrod:latest
        imagePullPolicy: ""
        name: hotrod
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
